[package]
name = "grpc-ordering-test"
version = "0.1.0"
edition = "2021"

[dependencies]
yellowstone-grpc-client = "4"
yellowstone-grpc-proto = "4"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
futures = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
